[package]
name = "stardict-rs"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
flate2 = "1.0.21"
sysbar = "0.3.0"
clipboard = "0.5.0"
cmd_lib = "0.8.2"
